fix: remove gap property

--- a/home-modules/desktops/hyprland/waybar/style.css
+++ b/home-modules/desktops/hyprland/waybar/style.css
@@ -29,7 +29,6 @@ window#waybar {
 #battery,
 #language,
 #custom-power {
-  gap: 32px;
   background-color: @bg-primary;
   color: @content-primary;
   border-radius: 8px;
